[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confusion-visualization"
version = "1.0"
dynamic = ["version"]
dependencies = [
   "opencv-python >= 4.10.0.84",
   "scikit-learn >= 1.5.1",
   "matplotlib >= 3.9.1"
]
authors = [
   {name = "Aiden Ochoa", email = "aio5165@psu.edu"}
]
readme = "README.md"
license = {file = LICENSE}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/suksia/confusion-visualization"
Issues = "https://github.com/suksia/confusion-visualization/issues"
